Initial checkin for transient blur check

Bug: 710532
Change-Id: I7e025432b2f9c90ef6964b3bde15b5c220d922ac